--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="lead">
         <h1 class="lead__title">From Portland to Portland</h1>
         <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
-        <img class="lead__image" src="images/__image.jpg" alt="lead-image">
+        <img class="lead__image" src="images/__image-lead.jpg" alt="lead-image">
         <p class="lead__caption">Your journey starts here</p>
       </section>
       <section class="intro">
@@ -73,7 +73,86 @@
         <img class="photo-grid__item" src="images/__item-desert.png" alt="img-desert">
       </section>
       <section class="places">
-
+        <div class="place">
+          <h2 class="place__title">Maine</h2>
+          <img class="place__image" src="images/__image-maine.png" alt="img-maine">
+          <div class="place__webiste">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://www.global.llbean.com">global.llbean.com</a>
+          </div>
+          <p class="paragraph">Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly
+            underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be
+            sure not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.
+          </p>
+          <p class="paragraph">Thankfully, not only is Maine home to the very first European settlers on US territory in
+            the era of Vikings, but is also home to L.L. Bean, which is a great company to grab a super sturdy backpack
+            from for your 3-month expedition. </p>
+          <p class="paragraph">Average cost: $80-100.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">New Hampshire</h2>
+          <img class="place__image" src="images/__image-new-hampshire.png" alt="img-new-hampshire">
+          <div class="place__webiste">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://www.timberland.com">timberland.com</a>
+          </div>
+          <p class="paragraph">There's no better place to lose yourself in nature than in springtime New Hampshire. As
+            serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to
+            the South. So enjoy it while it lasts.</p>
+          <p class="paragraph">You won't be on your bike the whole time, so doesn't it make sense to pick up some extra
+            footwear? Fortunately for you, the best outdoor shoe company in the history of the world proudly hails from
+            this state. Cycle by the Timberland headquarters in Stratham, and pick up a pair of rugged, waterproof boots
+            to keep your feet dry. Fitting for unpredictable weather you may be confronted by while passing through the
+            Appalachians. These boots are also better than cycling shoes when pitching a tent.</p>
+          <p class="paragraph">Average cost: $100-150.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">New York</h2>
+          <img class="place__image" src="images/__image-new-york.png" alt="img-new-york">
+          <div class="place__webiste">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://www.ge.com">ge.com</a>
+          </div>
+          <p class="paragraph">Not only famous for “The Big Apple,” the state of NY also has several other reasons for
+            going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has
+            been home to the world-famous General Electric Company.</p>
+          This is where modern power generators were born as well as contemporary means of transmitting energy. So we
+          figured this would be the perfect place to find a batteryless dynamo light for your bicycle to help you see
+          through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">Erie, PA</h2>
+          <img class="place__image" src="images/__image-erie-pa.png" alt="img-erie-pa">
+          <div class="place__webiste">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://www.fws.gov">www.fws.gov</a>
+          </div>
+          <p class="paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be from
+            time to time, is another town worth passing through for several different reasons. While it might be most
+            famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war,
+            Pennsylvania also has produced a rather decent-sized Amish community (eerie, huh?)</p>
+          <p class="paragraph">The reason we've brought you here today, if you haven't already guessed, can be summed up
+            by using one delicious word: chocolate. Hershey's is a Pennsylvania-based company. Most likely, one of the
+            tastiest missions you'll ever embark on during this tour, try to find an Amish friend and enjoy a bar in the
+            National Wildlife Refuge on your way to Erie and have an extra eerie time!</p>
+          <p class="paragraph">The current cost of a Hershey's Chocolate bar: about 60¢.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">Ohio</h2>
+          <img class="place__image" src="images/__image-ohio.png" alt="img-ohio">
+          <div class="place__webiste">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a>
+          </div>
+          <p class="paragraph">From the college capital of Columbus to the clean coastline of Cleveland, Ohio is a truly
+            hidden gem. Earthquakes are surprisingly common in this particular region of North America, over 200 of
+            which have registered with a magnitude of 2 or higher since 1776. However, earthquakes aren't the only thing
+            shaking this centrally located state. One of the country's largest and oldest roller coaster parks is
+            waiting to ROCK your world in Sandusky, Ohio! This will presumably be one of the most thrilling quests
+            you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many roller
+            coasters as you can before continue your bike ride!</p>
+          <p class="paragraph">The cost of a daily ticket: about $100.</p>
+        </div>
       </section>
       <section class="cover">
 
