cover and footer html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <img class="place__image" src="images/__image-maine.png" alt="img-maine">
           <div class="place__webiste">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.global.llbean.com">global.llbean.com</a>
+            <a class="place__link"
+              href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
           </div>
           <p class="paragraph">Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly
             underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be
@@ -94,7 +95,7 @@
           <img class="place__image" src="images/__image-new-hampshire.png" alt="img-new-hampshire">
           <div class="place__webiste">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.timberland.com">timberland.com</a>
+            <a class="place__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
           </div>
           <p class="paragraph">There's no better place to lose yourself in nature than in springtime New Hampshire. As
             serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to
@@ -111,7 +112,7 @@
           <img class="place__image" src="images/__image-new-york.png" alt="img-new-york">
           <div class="place__webiste">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.ge.com">ge.com</a>
+            <a class="place__link" href="https://www.ge.com/about-us">ge.com</a>
           </div>
           <p class="paragraph">Not only famous for “The Big Apple,” the state of NY also has several other reasons for
             going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has
@@ -125,7 +126,7 @@
           <img class="place__image" src="images/__image-erie-pa.png" alt="img-erie-pa">
           <div class="place__webiste">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.fws.gov">www.fws.gov</a>
+            <a class="place__link" href="https://www.fws.gov/refuge/erie">www.fws.gov</a>
           </div>
           <p class="paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be from
             time to time, is another town worth passing through for several different reasons. While it might be most
@@ -155,11 +156,25 @@
         </div>
       </section>
       <section class="cover">
-
+        <h2 class="cover__title">Historic Route 66</h2>
+        <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an iframe
+        </p>
+        <div class="overlay"></div>
       </section>
     </main>
     <footer class="footer">
-
+      <ul class="footer__links">
+        <li>
+          <a class="footer__link" href="https://yandex.com/maps">Maps</a>
+        </li>
+        <li>
+          <a class="footer__link" href="https://yandex.com/weather/moscow">Weather</a>
+        </li>
+        <li>
+          <a class="footer__link" href="https://calendar.yandex.ru">Calendar</a>
+        </li>
+      </ul>
+      <p class="footer__copyright">&#169; 2020. Kayla Thomas</p>
     </footer>
   </div>
 </body>
