--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo" src="images/logo.png" alt="header-logo">
-      <ul class="header__lang-links">
-        <li>
-          <a class="header__lang-link" href="#">En</a>
-        </li>
-        <li>
-          <a class="header__lang-link" href="#">Es</a>
-        </li>
-      </ul>
+      <div class="header__columns">
+        <img class="logo" src="images/logo.png" alt="header-logo">
+        <ul class="header__lang-links">
+          <li>
+            <a class="header__lang-link header__lang-link_en" href="#">En</a>
+          </li>
+          <li>
+            <a class="header__lang-link header__lang-link_es" href="#">Es</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main class="content">
       <section class="lead">
