--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="header__columns">
+      <div class="header__container">
         <img class="logo" src="images/logo.png" alt="header-logo">
         <ul class="header__lang-links">
           <li>
@@ -26,10 +26,12 @@
     </header>
     <main class="content">
       <section class="lead">
-        <h1 class="lead__title">From Portland to Portland</h1>
-        <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
-        <img class="lead__image" src="images/__image-lead.jpg" alt="lead-image">
-        <p class="lead__caption">Your journey starts here</p>
+        <div class="lead__container">
+          <h1 class="lead__title">From Portland to Portland</h1>
+          <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
+          <img class="lead__image" src="images/__image-lead.jpg" alt="lead-image">
+          <p class="lead__caption">Your journey starts here</p>
+        </div>
       </section>
       <section class="intro">
         <h2 class="intro__title">Know the country you live in a little better</h2>
