fixed header and lead margins

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>From Portland to Portland</title>
 </head>
 
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
       <div class="header__container">
