--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
           <h1 class="lead__title">From Portland to Portland</h1>
           <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
           <img class="lead__image" src="images/__image-lead.jpg" alt="lead-image">
-          <p class="lead__caption">Your journey starts here</p>
+          <p class="lead__caption">YOUR JOURNEY STARTS HERE</p>
         </div>
       </section>
       <section class="intro">
         <h2 class="intro__title">Know the country you live in a little better</h2>
-        <p class="intro__text">That's exactly what we have arranged for you via this travel story</p>
-        <p class="intro__text">Need more action and adventure in your life instead of the same old routine? From
+        <p class="intro__text intro__text_subtitle">That's exactly what we have arranged for you via this travel story
+        </p>
+        <p class="intro__text intro__text_paragraph">Need more action and adventure in your life instead of the same
+          old routine? From
           Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown
           regions of your country. Leave the car at home and travel by bike starting in New England where it all began.
           You will pass through 12 beautiful states, covering a total of 3,600 miles, and accomplish 3 monumental
@@ -44,19 +46,19 @@
           polio in Africa, and even stopping by famous author Stephen King's house to say hi and asking him to sign your
           favorite book.</p>
         <ul class="intro__list">
-          <li>
+          <li class="intro__list-items">
             <p class="intro__list-text">Distance (miles)</p>
             <p class="intro__list-numbers">3,644</p>
           </li>
-          <li>
+          <li class="intro__list-items">
             <p class="intro__list-text">Travel time (days)</p>
             <p class="intro__list-numbers">22</p>
           </li>
-          <li>
+          <li class="intro__list-items">
             <p class="intro__list-text">Highest point (feet)</p>
             <p class="intro__list-numbers">9,613</p>
           </li>
-          <li>
+          <li class="intro__list-items">
             <p class="intro__list-text">Lowest point (feet)</p>
             <p class="intro__list-numbers">-3</p>
           </li>
