--- a/index.html
+++ b/index.html
@@ -65,18 +65,20 @@
         </ul>
       </section>
       <section class="photo-grid">
-        <img class="photo-grid__item" src="images/__item-road.png" alt="img-road">
-        <img class="photo-grid__item" src="images/__item-water.png" alt="img-water">
-        <img class="photo-grid__item" src="images/__item-flying.png" alt="img-flying">
-        <img class="photo-grid__item" src="images/__item-woods.png" alt="img-woods">
-        <img class="photo-grid__item" src="images/__item-fog.png" alt="img-fog">
-        <img class="photo-grid__item" src="images/__item-mountain.png" alt="img-mountain">
-        <img class="photo-grid__item" src="images/__item-rocks.png" alt="img-rocks">
-        <img class="photo-grid__item" src="images/__item-plant.png" alt="img-plant">
-        <img class="photo-grid__item" src="images/__item-hills.png" alt="img-hills">
-        <img class="photo-grid__item" src="images/__item-sand.png" alt="img-sand">
-        <img class="photo-grid__item" src="images/__item-birds.png" alt="img-birds">
-        <img class="photo-grid__item" src="images/__item-desert.png" alt="img-desert">
+        <div class="photo-grid__container">
+          <img class="photo-grid__item" src="images/__item-road.png" alt="img-road">
+          <img class="photo-grid__item" src="images/__item-water.png" alt="img-water">
+          <img class="photo-grid__item" src="images/__item-flying.png" alt="img-flying">
+          <img class="photo-grid__item" src="images/__item-woods.png" alt="img-woods">
+          <img class="photo-grid__item" src="images/__item-fog.png" alt="img-fog">
+          <img class="photo-grid__item" src="images/__item-mountain.png" alt="img-mountain">
+          <img class="photo-grid__item" src="images/__item-rocks.png" alt="img-rocks">
+          <img class="photo-grid__item" src="images/__item-plant.png" alt="img-plant">
+          <img class="photo-grid__item" src="images/__item-hills.png" alt="img-hills">
+          <img class="photo-grid__item" src="images/__item-sand.png" alt="img-sand">
+          <img class="photo-grid__item" src="images/__item-birds.png" alt="img-birds">
+          <img class="photo-grid__item" src="images/__item-desert.png" alt="img-desert">
+        </div>
       </section>
       <section class="places">
         <div class="place">
