started cover block

--- a/index.html
+++ b/index.html
@@ -215,10 +215,13 @@
         </div>
       </section>
       <section class="cover">
-        <h2 class="cover__title">Historic Route 66</h2>
-        <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an iframe
-        </p>
-        <div class="overlay"></div>
+        <div class="cover__container">
+          <h2 class="cover__title">Historic Route 66</h2>
+          <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an
+            iframe
+          </p>
+          <div class="overlay"></div>
+        </div>
       </section>
     </main>
     <footer class="footer">
