cover block and footer

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>From Portland to Portland</title>
 </head>
 
-<body class="body">
-  <div class="page">
+<body class="page">
+  <div class="page__container">
     <header class="header">
       <div class="header__container">
         <img class="logo" src="images/logo.png" alt="header-logo">
@@ -215,28 +215,30 @@
         </div>
       </section>
       <section class="cover">
-        <div class="cover__container">
+        <a class="cover__container" href="https://www.nps.gov/nr/travel/route66/maps66.html">
           <h2 class="cover__title">Historic Route 66</h2>
           <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an
             iframe
           </p>
           <div class="overlay"></div>
-        </div>
+        </a>
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
-        <li>
-          <a class="footer__link" href="https://yandex.com/maps">Maps</a>
-        </li>
-        <li>
-          <a class="footer__link" href="https://yandex.com/weather/moscow">Weather</a>
-        </li>
-        <li>
-          <a class="footer__link" href="https://calendar.yandex.ru">Calendar</a>
-        </li>
-      </ul>
-      <p class="footer__copyright">&#169; 2020. Kayla Thomas</p>
+      <div class="footer__container">
+        <ul class="footer__links">
+          <li>
+            <a class="footer__link" href="https://yandex.com/maps">Maps</a>
+          </li>
+          <li>
+            <a class="footer__link" href="https://yandex.com/weather/moscow">Weather</a>
+          </li>
+          <li>
+            <a class="footer__link" href="https://calendar.yandex.ru">Calendar</a>
+          </li>
+        </ul>
+        <p class="footer__copyright">&#169; 2020. Kayla Thomas</p>
+      </div>
     </footer>
   </div>
 </body>
