fixed places block format

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <img class="place__image" src="images/__image-new-hampshire.png" alt="img-new-hampshire">
           </div>
           <div class="place__description">
-            <div class="place__website">
+            <div class="place__website place__website_new-hampshire">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
             </div>
