cover block adaptive css

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               the era of Vikings, but is also home to L.L. Bean, which is a great company to grab a super sturdy
               backpack
               from for your 3-month expedition. </p>
-            <p class="place__paragraph place__paragraph_comment">Average cost: $80-100.</p>
+            <p class="place__paragraph place__paragraph_sub">Average cost: $80-100.</p>
           </div>
         </div>
         <div class="place">
