--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
     <footer class="footer">
       <div class="footer__container">
         <ul class="footer__links">
-          <li>
-            <a class="footer__link" href="https://yandex.com/maps">Maps</a>
+          <li class="footer__link">
+            <a class="footer__link-text" href="https://yandex.com/maps">Maps</a>
           </li>
-          <li>
-            <a class="footer__link" href="https://yandex.com/weather/moscow">Weather</a>
+          <li class="footer__link">
+            <a class="footer__link-text" href="https://yandex.com/weather/moscow">Weather</a>
           </li>
-          <li>
-            <a class="footer__link" href="https://calendar.yandex.ru">Calendar</a>
+          <li class="footer__link">
+            <a class="footer__link-text" href="https://calendar.yandex.ru">Calendar</a>
           </li>
         </ul>
         <p class="footer__copyright">&#169; 2020. Kayla Thomas</p>
