--- a/index.html
+++ b/index.html
@@ -78,17 +78,14 @@
       </section>
       <section class="places">
         <div class="place">
-          <!-- <div class="place__heading"> -->
           <h2 class="place__title">Maine</h2>
           <img class="place__image" src="images/__image-maine.png" alt="img-maine">
-          <!-- </div> -->
-          <!-- <div class="place__description"> -->
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a class="place__link"
               href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
           </div>
-          <div class="place__paragraph">
+          <div class="place__paragraphs">
             <p class="place__paragraph place__paragraph_main">Still, as sparsely populated as it was in the 1600s, this
               is an
               extraordinary
@@ -105,19 +102,15 @@
               from for your 3-month expedition. </p>
             <p class="place__paragraph place__paragraph_sub">Average cost: $80-100.</p>
           </div>
-          <!-- </div> -->
         </div>
         <div class="place">
-          <!-- <div class="place__heading"> -->
           <h2 class="place__title">New Hampshire</h2>
           <img class="place__image" src="images/__image-new-hampshire.png" alt="img-new-hampshire">
-          <!-- </div> -->
-          <!-- <div class="place__description"> -->
-          <div class="place__website place__website_new-hampshire">
+          <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
           </div>
-          <div class="place__paragraph">
+          <div class="place__paragraphs">
             <p class="place__paragraph place__paragraph_main">There's no better place to lose yourself in nature than in
               springtime New
               Hampshire. As
@@ -136,19 +129,15 @@
               Appalachians. These boots are also better than cycling shoes when pitching a tent.</p>
             <p class="place__paragraph place__paragraph_main">Average cost: $100-150.</p>
           </div>
-          <!-- </div> -->
         </div>
         <div class="place">
-          <!-- <div class="place__heading"> -->
           <h2 class="place__title">New York</h2>
           <img class="place__image" src="images/__image-new-york.png" alt="img-new-york">
-          <!-- </div> -->
-          <!-- <div class="place__description"> -->
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="https://www.ge.com/about-us">ge.com</a>
           </div>
-          <div class="place__paragraph">
+          <div class="place__paragraphs">
             <p class="place__paragraph place__paragraph_main">Not only famous for “The Big Apple,” the state of NY also
               has several other
               reasons for
@@ -162,19 +151,16 @@
               through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.
             </p>
           </div>
-          <!-- </div> -->
         </div>
         <div class="place">
-          <!-- <div class="place__heading"> -->
           <h2 class="place__title">Erie, PA</h2>
           <img class="place__image" src="images/__image-erie-pa.png" alt="img-erie-pa">
           <!-- </div> -->
-          <!-- <div class="place__description"> -->
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="https://www.fws.gov/refuge/erie">www.fws.gov</a>
           </div>
-          <div class="place__paragraph">
+          <div class="place__paragraphs">
             <p class="place__paragraph place__paragraph_main">Erie, Pennsylvania, not to be confused with the word
               “eerie,” although it can be
               from
@@ -191,19 +177,16 @@
             <p class="place__paragraph place__paragraph_main">The current cost of a Hershey's Chocolate bar: about
               60¢.</p>
           </div>
-          <!-- </div> -->
         </div>
         <div class="place">
-          <!-- <div class="place__heading"> -->
           <h2 class="place__title">Ohio</h2>
           <img class="place__image" src="images/__image-ohio.png" alt="img-ohio">
           <!-- </div> -->
-          <!-- <div class="place__description"> -->
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a>
           </div>
-          <div class="place__paragraph">
+          <div class="place__paragraphs">
             <p class="place__paragraph place__paragraph_main">From the college capital of Columbus to the clean
               coastline of Cleveland, Ohio
               is
@@ -217,7 +200,6 @@
               coasters as you can before continue your bike ride!</p>
             <p class="place__paragraph place__paragraph_main">The cost of a daily ticket: about $100.</p>
           </div>
-          <!-- </div> -->
         </div>
       </section>
       <section class="cover">
