--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
         </div>
         <div class="place__paragraphs">
-          <p class="place__paragraph place__paragraph_main">Still, as sparsely populated as it was in the 1600s, this
+          <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this
             is an
             extraordinary
             and
@@ -93,13 +93,13 @@
             underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be
             sure not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.
           </p>
-          <p class="place__paragraph place__paragraph_sub">Thankfully, not only is Maine home to the very first
+          <p class="place__paragraph">Thankfully, not only is Maine home to the very first
             European settlers on US
             territory in
             the era of Vikings, but is also home to L.L. Bean, which is a great company to grab a super sturdy
             backpack
             from for your 3-month expedition. </p>
-          <p class="place__paragraph place__paragraph_sub">Average cost: $80-100.</p>
+          <p class="place__paragraph">Average cost: $80-100.</p>
         </div>
       </div>
       <div class="place">
@@ -110,12 +110,12 @@
           <a class="place__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
         </div>
         <div class="place__paragraphs">
-          <p class="place__paragraph place__paragraph_main">There's no better place to lose yourself in nature than in
+          <p class="place__paragraph">There's no better place to lose yourself in nature than in
             springtime New
             Hampshire. As
             serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to
             the South. So enjoy it while it lasts.</p>
-          <p class="place__paragraph place__paragraph_main">You won't be on your bike the whole time, so doesn't it
+          <p class="place__paragraph">You won't be on your bike the whole time, so doesn't it
             make sense to pick up
             some
             extra
@@ -126,7 +126,7 @@
             to keep your feet dry. Fitting for unpredictable weather you may be confronted by while passing through
             the
             Appalachians. These boots are also better than cycling shoes when pitching a tent.</p>
-          <p class="place__paragraph place__paragraph_main">Average cost: $100-150.</p>
+          <p class="place__paragraph">Average cost: $100-150.</p>
         </div>
       </div>
       <div class="place">
@@ -137,12 +137,12 @@
           <a class="place__link" href="https://www.ge.com/about-us">ge.com</a>
         </div>
         <div class="place__paragraphs">
-          <p class="place__paragraph place__paragraph_main">Not only famous for “The Big Apple,” the state of NY also
+          <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also
             has several other
             reasons for
             going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has
             been home to the world-famous General Electric Company.</p>
-          <p class="place__paragraph place__paragraph_sub">This is where modern power generators were born as well as
+          <p class="place__paragraph">This is where modern power generators were born as well as
             contemporary means of
             transmitting energy. So we
             figured this would be the perfect place to find a batteryless dynamo light for your bicycle to help you
@@ -160,20 +160,20 @@
           <a class="place__link" href="https://www.fws.gov/refuge/erie">www.fws.gov</a>
         </div>
         <div class="place__paragraphs">
-          <p class="place__paragraph place__paragraph_main">Erie, Pennsylvania, not to be confused with the word
+          <p class="place__paragraph">Erie, Pennsylvania, not to be confused with the word
             “eerie,” although it can be
             from
             time to time, is another town worth passing through for several different reasons. While it might be most
             famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war,
             Pennsylvania also has produced a rather decent-sized Amish community (eerie, huh?)</p>
-          <p class="place__paragraph place__paragraph_main">The reason we've brought you here today, if you haven't
+          <p class="place__paragraph">The reason we've brought you here today, if you haven't
             already guessed, can be
             summed up
             by using one delicious word: chocolate. Hershey's is a Pennsylvania-based company. Most likely, one of the
             tastiest missions you'll ever embark on during this tour, try to find an Amish friend and enjoy a bar in
             the
             National Wildlife Refuge on your way to Erie and have an extra eerie time!</p>
-          <p class="place__paragraph place__paragraph_main">The current cost of a Hershey's Chocolate bar: about
+          <p class="place__paragraph">The current cost of a Hershey's Chocolate bar: about
             60¢.</p>
         </div>
       </div>
@@ -186,7 +186,7 @@
           <a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a>
         </div>
         <div class="place__paragraphs">
-          <p class="place__paragraph place__paragraph_main">From the college capital of Columbus to the clean
+          <p class="place__paragraph">From the college capital of Columbus to the clean
             coastline of Cleveland, Ohio
             is
             a truly
@@ -197,7 +197,7 @@
             waiting to ROCK your world in Sandusky, Ohio! This will presumably be one of the most thrilling quests
             you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many roller
             coasters as you can before continue your bike ride!</p>
-          <p class="place__paragraph place__paragraph_main">The cost of a daily ticket: about $100.</p>
+          <p class="place__paragraph">The cost of a daily ticket: about $100.</p>
         </div>
       </div>
     </section>
