moved normalize.css / changed logo to svg

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
   <title>From Portland to Portland</title>
 </head>
@@ -12,7 +11,7 @@
 <body class="page">
   <header class="header">
     <div class="header__container">
-      <img class="logo" src="images/logo.png" alt="header-logo">
+      <img class="logo" src="images/logo.svg" alt="header-logo">
       <ul class="header__lang-links">
         <li>
           <a class="header__lang-link header__lang-link_en" href="#">En</a>
