--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <img class="logo" src="images/logo.svg" alt="header-logo">
       <ul class="header__lang-links">
         <li>
-          <a class="header__lang-link header__lang-link_en" href="#">En</a>
+          <a class="header__lang-link header__lang-link_active" href="#">En</a>
         </li>
         <li>
-          <a class="header__lang-link header__lang-link_es" href="#">Es</a>
+          <a class="header__lang-link" href="#">Es</a>
         </li>
       </ul>
     </div>
@@ -27,11 +27,11 @@
       <h1 class="lead__title">From Portland to Portland</h1>
       <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
       <img class="lead__image" src="images/__image-lead.jpg" alt="lead-image">
-      <p class="lead__caption">YOUR JOURNEY STARTS HERE</p>
+      <p class="lead__caption">Your journey starts here</p>
     </section>
     <section class="intro">
       <h2 class="intro__title">Know the country you live in a little better</h2>
-      <p class="intro__text intro__text_subtitle">That's exactly what we have arranged for you via this travel story
+      <p class="intro__subtitle">That's exactly what we have arranged for you via this travel story
       </p>
       <p class="intro__text intro__text_paragraph">Need more action and adventure in your life instead of the same
         old routine? From
