--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <img class="photo-grid__item" src="images/__item-desert.png" alt="img-desert">
     </section>
     <section class="places">
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Maine</h2>
         <img class="place__image" src="images/__image-maine.png" alt="img-maine">
         <div class="place__website">
@@ -98,8 +98,8 @@
             from for your 3-month expedition. </p>
           <p class="place__paragraph">Average cost: $80-100.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">New Hampshire</h2>
         <img class="place__image" src="images/__image-new-hampshire.png" alt="img-new-hampshire">
         <div class="place__website">
@@ -125,8 +125,8 @@
             Appalachians. These boots are also better than cycling shoes when pitching a tent.</p>
           <p class="place__paragraph">Average cost: $100-150.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">New York</h2>
         <img class="place__image" src="images/__image-new-york.png" alt="img-new-york">
         <div class="place__website">
@@ -147,8 +147,8 @@
             through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.
           </p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">Erie, PA</h2>
         <img class="place__image" src="images/__image-erie-pa.png" alt="img-erie-pa">
         <!-- </div> -->
@@ -173,8 +173,8 @@
           <p class="place__paragraph">The current cost of a Hershey's Chocolate bar: about
             60¢.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">Ohio</h2>
         <img class="place__image" src="images/__image-ohio.png" alt="img-ohio">
         <!-- </div> -->
@@ -196,7 +196,7 @@
             coasters as you can before continue your bike ride!</p>
           <p class="place__paragraph">The cost of a daily ticket: about $100.</p>
         </div>
-      </div>
+      </article>
     </section>
     <section class="cover">
       <a class="cover__container" href="https://www.nps.gov/nr/travel/route66/maps66.html">
