places descriptive image names

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="places">
       <article class="place">
         <h2 class="place__title">Maine</h2>
-        <img class="place__image" src="images/__image-maine.png" alt="img-maine">
+        <img class="place__image" src="images/__image-maine.png" alt="maine-lighthouse">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link"
@@ -101,7 +101,7 @@
       </article>
       <article class="place">
         <h2 class="place__title">New Hampshire</h2>
-        <img class="place__image" src="images/__image-new-hampshire.png" alt="img-new-hampshire">
+        <img class="place__image" src="images/__image-new-hampshire.png" alt="new-hampshire-valley">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
@@ -128,7 +128,7 @@
       </article>
       <article class="place">
         <h2 class="place__title">New York</h2>
-        <img class="place__image" src="images/__image-new-york.png" alt="img-new-york">
+        <img class="place__image" src="images/__image-new-york.png" alt="new-york-city-street">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://www.ge.com/about-us">ge.com</a>
@@ -150,7 +150,7 @@
       </article>
       <article class="place">
         <h2 class="place__title">Erie, PA</h2>
-        <img class="place__image" src="images/__image-erie-pa.png" alt="img-erie-pa">
+        <img class="place__image" src="images/__image-erie-pa.png" alt="erie-pa-waterfall">
         <!-- </div> -->
         <div class="place__website">
           <p class="place__url-heading">URL</p>
@@ -176,7 +176,7 @@
       </article>
       <article class="place">
         <h2 class="place__title">Ohio</h2>
-        <img class="place__image" src="images/__image-ohio.png" alt="img-ohio">
+        <img class="place__image" src="images/__image-ohio.png" alt="ohio-windmill">
         <!-- </div> -->
         <div class="place__website">
           <p class="place__url-heading">URL</p>
