--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <img class="place__image" src="images/__image-maine.png" alt="maine-lighthouse">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link"
+          <a class="place__link" target="_blank"
             href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
         </div>
         <div class="place__paragraphs">
@@ -104,7 +104,7 @@
         <img class="place__image" src="images/__image-new-hampshire.png" alt="new-hampshire-valley">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
+          <a class="place__link" target="_blank" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">There's no better place to lose yourself in nature than in
@@ -131,7 +131,7 @@
         <img class="place__image" src="images/__image-new-york.png" alt="new-york-city-street">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://www.ge.com/about-us">ge.com</a>
+          <a class="place__link" target="_blank" href="https://www.ge.com/about-us">ge.com</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also
@@ -154,7 +154,7 @@
         <!-- </div> -->
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://www.fws.gov/refuge/erie">www.fws.gov</a>
+          <a class="place__link" target="_blank" href="https://www.fws.gov/refuge/erie">www.fws.gov</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Erie, Pennsylvania, not to be confused with the word
@@ -180,7 +180,7 @@
         <!-- </div> -->
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a>
+          <a class="place__link" target="_blank" href="https://www.cedarpoint.com">cedarpoint.com</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">From the college capital of Columbus to the clean
@@ -199,7 +199,7 @@
       </article>
     </section>
     <section class="cover">
-      <a class="cover__container" href="https://www.nps.gov/nr/travel/route66/maps66.html">
+      <a class="cover__container" target="_blank" href="https://www.nps.gov/nr/travel/route66/maps66.html">
         <h2 class="cover__title">Historic Route 66</h2>
         <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an
           iframe
@@ -210,13 +210,13 @@
   <footer class="footer">
     <ul class="footer__links">
       <li class="footer__link">
-        <a class="footer__link-text" href="https://yandex.com/maps">Maps</a>
+        <a class="footer__link-text" target="_blank" href="https://yandex.com/maps">Maps</a>
       </li>
       <li class="footer__link">
-        <a class="footer__link-text" href="https://yandex.com/weather/moscow">Weather</a>
+        <a class="footer__link-text" target="_blank" href="https://yandex.com/weather/moscow">Weather</a>
       </li>
       <li class="footer__link">
-        <a class="footer__link-text" href="https://calendar.yandex.ru">Calendar</a>
+        <a class="footer__link-text" target="_blank" href="https://calendar.yandex.ru">Calendar</a>
       </li>
     </ul>
     <p class="footer__copyright">&#169; 2020. Kayla Thomas</p>
