--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="page">
   <header class="header">
-    <img class="logo" src="images/logo.svg" alt="header-logo">
+    <img class="logo" src="images/logo.svg" alt="usa-image">
     <ul class="header__lang-links">
       <li>
         <a class="header__lang-link header__lang-link_active" href="#">En</a>
@@ -24,7 +24,7 @@
     <section class="lead">
       <h1 class="lead__title">From Portland to Portland</h1>
       <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
-      <img class="lead__image" src="images/__image-lead.jpg" alt="lead-image">
+      <img class="lead__image" src="images/__image-lead.jpg" alt="mountain-image">
       <p class="lead__caption">Your journey starts here</p>
     </section>
     <section class="intro">
