fixed lead margins / intro html modifier

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2 class="intro__title">Know the country you live in a little better</h2>
       <p class="intro__subtitle">That's exactly what we have arranged for you via this travel story
       </p>
-      <p class="intro__text intro__text_paragraph">Need more action and adventure in your life instead of the same
+      <p class="intro__text intro__text">Need more action and adventure in your life instead of the same
         old routine? From
         Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown
         regions of your country. Leave the car at home and travel by bike starting in New England where it all began.
