--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2 class="intro__title">Know the country you live in a little better</h2>
       <p class="intro__subtitle">That's exactly what we have arranged for you via this travel story
       </p>
-      <p class="intro__text intro__text">Need more action and adventure in your life instead of the same
+      <p class="intro__text">Need more action and adventure in your life instead of the same
         old routine? From
         Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown
         regions of your country. Leave the car at home and travel by bike starting in New England where it all began.
@@ -151,7 +151,6 @@
       <article class="place">
         <h2 class="place__title">Erie, PA</h2>
         <img class="place__image" src="images/__image-erie-pa.png" alt="erie-pa-waterfall">
-        <!-- </div> -->
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" target="_blank" href="https://www.fws.gov/refuge/erie">www.fws.gov</a>
@@ -177,23 +176,23 @@
       <article class="place">
         <h2 class="place__title">Ohio</h2>
         <img class="place__image" src="images/__image-ohio.png" alt="ohio-windmill">
-        <!-- </div> -->
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" target="_blank" href="https://www.cedarpoint.com">cedarpoint.com</a>
         </div>
         <div class="place__paragraphs">
-          <p class="place__paragraph">From the college capital of Columbus to the clean
+          <p class="place__paragraph">
+            From the college capital of Columbus to the clean
             coastline of Cleveland, Ohio
             is
             a truly
             hidden gem. Earthquakes are surprisingly common in this particular region of North America, over 200 of
             which have registered with a magnitude of 2 or higher since 1776. However, earthquakes aren't the only
-            thing
-            shaking this centrally located state. One of the country's largest and oldest roller coaster parks is
+            thing shaking this centrally located state. One of the country's largest and oldest roller coaster parks is
             waiting to ROCK your world in Sandusky, Ohio! This will presumably be one of the most thrilling quests
-            you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many roller
-            coasters as you can before continue your bike ride!</p>
+            you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many
+            rollercoasters as you can before continue your bike ride!
+          </p>
           <p class="place__paragraph">The cost of a daily ticket: about $100.</p>
         </div>
       </article>
